--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@
 [x] Simple units and party & click2heal system
 [x] Raid
 [ ] Style all remaining blizzard frames
-[ ] Actionbars
+[x] Actionbars
 [x] Chat
 [x] Quest log
 [ ] Create own damage and healing recorder
