--- a/TODO.txt
+++ b/TODO.txt
@@ -9,8 +9,8 @@
 
 ---
 
-[ ] Update db with missing health bar
-[ ] Implement blizzard default + custom + text role identifiers
+[x] Update db with missing health bar
+[x] Implement blizzard default + custom + text role identifiers
 [ ] Implement missing health text (hidden if at 100%) eg. -5k
 [ ] Implement custom states (text, icon, modify color/alpha for the frame) for out-of-range, dead, offline, ghost
 [ ] Implement custom health that can vary depending on the level of health, eg. red on <25%, orange on less than 50% and so on.. might be good to reuse gradient...
