--- a/TODO.txt
+++ b/TODO.txt
@@ -12,7 +12,7 @@
 [x] Update db with missing health bar
 [x] Implement blizzard default + custom + text role identifiers
 [x] Implement missing health text (hidden if at 100%) eg. -5k
+[ ] Implement visual options (Check psd on drive) right click toggle between enabled or disabled for unitframe/element/group.
 [ ] Implement custom states (text, icon, modify color/alpha for the frame) for out-of-range, dead, offline, ghost
 [ ] Implement custom health that can vary depending on the level of health, eg. red on <25%, orange on less than 50% and so on.. might be good to reuse gradient...
-[ ] Implement visual options...
 [ ] Implement party/raid preview?
